--- a/notebooks/test_2.ipynb
+++ b/notebooks/test_2.ipynb
@@ -737,6 +737,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0 = good status\n",
+    "1 = bad status"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -1507,8 +1515,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Took too long"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TRYING XGB below"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1560,7 @@
     "    learning_rate=0.05,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=0.8,\n",
-    "    tree_method=\"hist\",  # super fast on CPU (especially M2)\n",
+    "    tree_method=\"hist\",  \n",
     "    n_jobs=-1,\n",
     "    scale_pos_weight=(len(y_train) - sum(y_train)) / sum(y_train),\n",
     "    random_state=42,\n",
@@ -1551,6 +1573,20 @@
     "print(\"XGBoost F1:\", f1_score(y_test, pred))\n",
     "print(classification_report(y_test, pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SEEMS TO OVERFIT, SO LETS TRY AGAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
