--- a/notebooks/training_model.ipynb
+++ b/notebooks/training_model.ipynb
@@ -4632,7 +4632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4643,8 +4643,8 @@
       "OVERFITTING CHECK\n",
       "============================================================\n",
       "\n",
-      "Train F1: 0.9278\n",
-      "Test F1:  0.9272\n",
+      "Train F1: 0.9279\n",
+      "Test F1:  0.9274\n",
       "Gap:      0.0006\n",
       " No overfitting detected (gap < 0.03)\n"
      ]
@@ -4670,7 +4670,7 @@
     "if abs(train_f1 - best_f1) < 0.03:\n",
     "    print(\" No overfitting detected (gap < 0.03)\")\n",
     "elif abs(train_f1 - best_f1) < 0.10:\n",
-    "    print(\"⚠️ Minor overfitting (gap < 0.10)\")\n",
+    "    print(\" Minor overfitting (gap < 0.10)\")\n",
     "else:\n",
     "    print(\" Significant overfitting (gap ≥ 0.10)\")"
    ]
@@ -4816,8 +4816,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Difference seen between the folds and the F1-score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4827,46 +4834,46 @@
       "============================================================\n",
       "PROPER THRESHOLD OPTIMIZATION (NO TEST LEAKAGE)\n",
       "============================================================\n",
-      "Training model (no SMOTE)...\n",
+      "Training model...\n",
       "\n",
       "Optimizing threshold on validation set...\n",
-      "Best threshold: 0.670\n",
-      "Validation F1: 0.9297\n",
+      "Best threshold: 0.660\n",
+      "Validation F1: 0.9296\n",
       "\n",
       "============================================================\n",
       "FINAL TEST EVALUATION\n",
       "============================================================\n",
       "\n",
-      "Validation F1: 0.9297\n",
-      "Test F1:       0.9295\n",
-      "Gap:           0.0002\n",
-      "✅ PASS (F1 = 0.9295 ≥ 0.75)\n",
+      "Validation F1: 0.9296\n",
+      "Test F1:       0.9297\n",
+      "Gap:           0.0001\n",
+      " PASS (F1 = 0.9297 ≥ 0.75)\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.60      0.02      0.05     59798\n",
+      "           0       0.64      0.02      0.04     59803\n",
       "           1       0.87      1.00      0.93    392330\n",
       "\n",
-      "    accuracy                           0.87    452128\n",
-      "   macro avg       0.73      0.51      0.49    452128\n",
-      "weighted avg       0.83      0.87      0.81    452128\n",
+      "    accuracy                           0.87    452133\n",
+      "   macro avg       0.76      0.51      0.49    452133\n",
+      "weighted avg       0.84      0.87      0.81    452133\n",
       "\n",
       "\n",
       "============================================================\n",
       "OVERFITTING CHECK\n",
       "============================================================\n",
       "Train F1:      0.9301\n",
-      "Validation F1: 0.9297\n",
-      "Test F1:       0.9295\n",
-      "Train-Test Gap: 0.0006\n",
-      "✅ No overfitting\n"
+      "Validation F1: 0.9296\n",
+      "Test F1:       0.9297\n",
+      "Train-Test Gap: 0.0004\n",
+      " No overfitting\n"
      ]
     }
    ],
    "source": [
     "# ==============================================\n",
-    "# CELL: Proper Threshold Optimization \n",
+    "# Threshold Optimization \n",
     "# ==============================================\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -4879,7 +4886,7 @@
     "    X_train, y_train, test_size=0.2, random_state=42, stratify=y_train\n",
     ")\n",
     "\n",
-    "# Train model on train split (no SMOTE)\n",
+    "# Train model on train split \n",
     "xgb_proper = XGBClassifier(\n",
     "    n_estimators=500,\n",
     "    max_depth=6,\n",
@@ -4978,7 +4985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4988,46 +4995,46 @@
       "============================================================\n",
       "CROSS-VALIDATION WITH OPTIMIZED THRESHOLD\n",
       "============================================================\n",
-      "Using threshold: 0.670\n",
+      "Using threshold: 0.660\n",
       "\n",
       "Running 5-Fold Cross-Validation...\n",
       "\n",
       "Fold 1:\n",
-      "  F1 (threshold=0.670): 0.9297\n",
+      "  F1 (threshold=0.660): 0.9296\n",
       "  F1 (threshold=0.500): 0.9296\n",
       "Fold 2:\n",
-      "  F1 (threshold=0.670): 0.9296\n",
-      "  F1 (threshold=0.500): 0.9296\n",
+      "  F1 (threshold=0.660): 0.9297\n",
+      "  F1 (threshold=0.500): 0.9295\n",
       "Fold 3:\n",
-      "  F1 (threshold=0.670): 0.9295\n",
+      "  F1 (threshold=0.660): 0.9296\n",
       "  F1 (threshold=0.500): 0.9295\n",
       "Fold 4:\n",
-      "  F1 (threshold=0.670): 0.9297\n",
-      "  F1 (threshold=0.500): 0.9295\n",
+      "  F1 (threshold=0.660): 0.9296\n",
+      "  F1 (threshold=0.500): 0.9296\n",
       "Fold 5:\n",
-      "  F1 (threshold=0.670): 0.9295\n",
+      "  F1 (threshold=0.660): 0.9297\n",
       "  F1 (threshold=0.500): 0.9295\n",
       "\n",
       "============================================================\n",
       "CROSS-VALIDATION SUMMARY\n",
       "============================================================\n",
       "\n",
-      "With Optimized Threshold (0.670):\n",
+      "With Optimized Threshold (0.660):\n",
       "  Mean F1:   0.9296\n",
-      "  Std Dev:   0.0001\n",
-      "  Min F1:    0.9295\n",
+      "  Std Dev:   0.0000\n",
+      "  Min F1:    0.9296\n",
       "  Max F1:    0.9297\n",
       "\n",
       "With Default Threshold (0.500):\n",
-      "  Mean F1:   0.9296\n",
+      "  Mean F1:   0.9295\n",
       "  Std Dev:   0.0000\n",
       "\n",
       "Test Set Performance:\n",
-      "  Test F1:   0.9295\n",
+      "  Test F1:   0.9297\n",
       "\n",
       "Comparison:\n",
-      "  CV Mean vs Test Gap: 0.0001\n",
-      "  ✅ CV and Test agree - No overfitting!\n"
+      "  CV Mean vs Test Gap: 0.0000\n",
+      "   CV and Test agree - No overfitting!\n"
      ]
     }
    ],
@@ -5128,11 +5135,11 @@
     "print(f\"  CV Mean vs Test Gap: {abs(np.mean(cv_f1_scores) - test_f1):.4f}\")\n",
     "\n",
     "if abs(np.mean(cv_f1_scores) - test_f1) < 0.02:\n",
-    "    print(\"   CV and Test agree - No overfitting!\")\n",
+    "    print(\" CV and Test agree - No overfitting!\")\n",
     "elif abs(np.mean(cv_f1_scores) - test_f1) < 0.05:\n",
-    "    print(\"   Minor variance - Acceptable\")\n",
+    "    print(\" Minor variance - Acceptable\")\n",
     "else:\n",
-    "    print(\"   Discrepancy detected\")"
+    "    print(\" Discrepancy detected\")"
    ]
   },
   {
